Fix for ecom product images on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1134,6 +1134,12 @@ footer.bk-footer .widget.profile .twitter span {
   }
 }
 
+.ecom-product .ecom-product-preview-image-wrap img {
+   @media only screen and (max-width: 768px) {
+      width: 100%;
+   }
+}
+
 .form-group.productlist-search {
   position: relative;
   input[type=search] {
